FormacaoAcademica - Refatoracao do codigo